<resources>

    <string name="allow_write_storage_permission_help_text">Please allow storage permission in settings so that app can save file</string>
    <string name="denied_write_storage_peermission_help_text">You need to allow storage permission so that app can save file</string>
    <string name="allow_read_storage_permission_help_text">Please allow storage permission in settings so that app can read file</string>
    <string name="denied_read_storage_peermission_help_text">You need to allow storage permission so that app can read file</string>
    <string name="allow_camera_and_storage_permission_help_text">Please allow both camera and storage permission in settings so that app can capture image</string>
    <string name="denied_camera_and_storage_permission_help_text">You need to allow both camera and storage permission so that app can capture image</string>
    <string name="allow_location_permission_help_text">Please allow location permission in settings so that app can get location</string>
    <string name="denied_location_permission_help_text">You need to allow location permission so that app can get location</string>
    <string name="no_app_found">No applications found to perform the specified action</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="ok">Ok</string>
    <string name="failed">Failed</string>
    <string name="download_success">Download Success</string>
    <string name="audio_recording">Audio Recording</string>
    <string name="audio_record_limit">maximum limit 120 second</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="done">DONE</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="share_txt">Share</string>
    <string name="bio_other_device_txt1">You may need to install one or more apps for fingerprint scanning provided by the device manufacturer.</string>
    <string name="permission_required">Permission Required</string>
    <string name="open_settings">OPEN SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="location_services_disabled">Location services disabled</string>
    <string name="enable_location_txt">This service requires location services to be enabled. Would you like to enable location services?</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="downloading_file">Downloading...</string>
    <string name="open_multi">Open</string>

    <string name="oops_message">Oops!! There seems to be some issue at Department servers providing this service on UMANG.</string>
    <string name="session_loggedout_msg">Dear user, you will be logged out. Please log in to access UMANG</string>
    <string name="session_expire_msg">Your session has expired. Please log in again</string>
    <string name="other_devices">Other Devices</string>
    <string name="please_check_network_and_try_again">Please check your Internet Connection and try again</string>

    <string name="is_your_device_registered">Is your device registered?</string>
    <string name="morpho_desc1">As per the latest guidelines from UIDAI, only Registered Devices (RD) can be used for Aadhaar biometric authentication.</string>
    <string name="morpho_desc2">All the biometric devices used currently were classified as Public Devices. These Devices will no longer be usable for Aadhaar authentication and will be discontinued soon.</string>
    <string name="morpho_desc3">All Morpho device owners can visit https://rdserviceonline.com and register their respective devices.</string>
    <string name="morpho_desc4">Post registration, the Morpho SCL RD Service app is required to be installed for device activation.</string>
    <string name="mantra_desc1">As per the latest guidelines from UIDAI, only Registered Devices (RD) can be used for Aadhaar biometric authentication.</string>
    <string name="mantra_desc2">All the biometric devices used currently were classified as Public Devices. These Devices will no longer be usable for Aadhaar authentication and will be discontinued soon.</string>
    <string name="mantra_desc3">As per the information available, all Mantra device owners, with devices that were manufactured before April 2017, are required to visit http://servico.mantratecapp.com and register their respective devices for RD service.</string>
    <string name="mantra_desc4">Post Registration, users need to install Mantra RD service and Mantra Management Client app to proceed.</string>
    <string name="mantra_desc5">Users for rest of the devices can simply install Mantra RD service and Mantra Management Client apps and get their device registered.</string>
    <string name="please_note">Please note:</string>
    <string name="above_apps_needs_to_be_installed">The apps mentioned above need to be installed before you can continue to the next step.</string>
    <string name="download_user_manual"><u>Download User Manual</u></string>
    <string name="user_manual">User Manual</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="package_install">INSTALL</string>
    <string name="package_installed">INSTALLED</string>
    <string name="update">Update</string>
    <string name="other">Other</string>
    <string name="bio_other_device_txt2">Please contact your device manufacturer for more information.</string>
    <string name="select_your_biometric_device">Select your Biometric Device</string>

<!--    <string name="privacy_text">Your Privacy is important to us. To identify SPAM calls and SMS, App reqires following permissions:</string>-->
<!--    <string name="contacts_text">Contacts:</string>-->
<!--    <string name="contact_desc">To ignore calls and SMS received from the numbers in your contact list and process the rest.</string>-->
<!--    <string name="call_logs_text">Call Logs:</string>-->
<!--    <string name="call_log_desc">To identify SPAM calls from unknown numbers.</string>-->
<!--    <string name="make_and_manage">Make and Manage Phone calls:</string>-->
<!--    <string name="make_manage_des">To detect the sim information in phone.</string>-->
<!--    <string name="sms_logs">SMS Logs:</string>-->
<!--    <string name="sms_log_text">To identify SPAM SMS from unknown numbers and telemarketes.</string>-->
<!--    <string name="deny_text">Deny</string>-->
<!--    <string name="allow_text">Allow</string>-->
<!--    <string name="about_url">●This application is uploading the user\'s Primary Account information to https://apigw.umangapp.in</string>-->


    <string name="privacy_text">Your Privacy is important to us. To identify SPAM calls and SMS, the App collecting the following permissions:</string>
    <string name="contacts_text">Contacts:</string>
    <string name="contact_desc">Ignore calls and SMS received from the numbers in your contact list and process the rest.</string>
    <string name="call_logs_text">Call Logs:</string>
    <string name="call_log_desc">To identify SPAM calls from unknown numbers.</string>
    <string name="make_and_manage">Make and Manage Phone calls:</string>
    <string name="make_manage_des">To detect the sim information in the phone.</string>
    <string name="sms_logs">SMS Logs:</string>
    <string name="sms_log_text">To identify SPAM SMS from unknown numbers and telemarketers.</string>
    <string name="deny_text">Deny</string>
    <string name="allow_text">Allow</string>
    <!--    <string name="trai_text">We need to send user information to the TRAI department if users avail of these above features.</string>-->
    <string name="trai_new_text">To identify SPAM calls and SMS we required your primary account information like mobile number, email address which we need to send to the TRAI department if you would like to avail of any of the above-mentioned features.</string>

</resources>