<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mindorks.framework.mvvm.ui.splash.SplashActivity">
    <data>

        <variable
            name="viewModel"
            type="com.negd.umangwebview.ui.jeevan_pramaan.other_device_screen.OtherDeviceViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <include android:id="@+id/actionbar" layout="@layout/appbar_digilocker_view"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/padding_16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/txt_color_header"
                android:text="@string/bio_other_device_txt1"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/txt_color_header"
                android:text="@string/bio_other_device_txt2"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/nextTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_45dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:background="@drawable/rounded_btn"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_30dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:clickable="true"
                android:onClick="@{()->viewModel.nextClick()}"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:textSize="@dimen/text_18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>