<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:minWidth="300dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_5dp"
        android:text="@string/audio_recording"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_30dp"
        android:layout_marginStart="@dimen/margin_30dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:layout_marginBottom="@dimen/margin_18dp"
        android:orientation="vertical">



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin10"
            android:layout_marginStart="@dimen/margin_30dp"
            android:layout_marginEnd="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/otp_timer_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_2dp"
                android:text="00.00"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_18sp" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/otp_seekbar"
                style="@style/CustomProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:thumb="@android:color/transparent" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/waiting_otp_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_2dp"
                android:layout_marginTop="@dimen/margin_5dp"
                android:text="@string/audio_record_limit"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_play"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_play_grey"
                android:layout_marginEnd="@dimen/padding_8dp"/>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_recording"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/icon_recoding"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_stop"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/padding_8dp"
                android:src="@drawable/icon_stop_grey"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/no_txt"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/cancel_caps"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/yes_txt"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="16sp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>